--- a/src/main/webapp/css/paymentPage.css
+++ b/src/main/webapp/css/paymentPage.css
@@ -268,6 +268,53 @@ h1 {
     color: #ff1a1a;
 }
 
+  .popup {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1000;
+    }
+
+    .popup.hidden {
+        display: none;
+    }
+
+    .popup-content {
+        background: white;
+        padding: 20px;
+        border-radius: 5px;
+        text-align: center;
+        max-width: 400px;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .popup-content p {
+        margin-bottom: 30px;
+        color:red;
+    }
+
+    .popup-content button {
+        background: red;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    .popup-content button:hover {
+        background: #0fd417;
+    }
+        
+
+
+
 /* Responsive Design */
 @media (max-width: 600px) {
     .note-item {
