--- a/src/main/webapp/css/checkoutGuest.css
+++ b/src/main/webapp/css/checkoutGuest.css
@@ -13,7 +13,7 @@ body {
     width: 100%; 
     margin: 80px auto;
     padding: 10px;
-    background-color: #f9f9f9;
+    background-color: white;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -480,20 +480,20 @@ input::placeholder {
 }
 
 .tip-option[data-percent="22"] {
-    background-color: #ff9800; /* Orange */
+     background-color: #ff0000; /* Red */
 }
 
 .tip-option[data-percent="25"] {
-    background-color: #4caf50; /* Green */
+      background-color: #ff0000; /* Red */
 }
 
 .tip-option[data-percent="15"] {
-    background-color: #2196f3; /* Blue */
+     background-color: #ff0000; /* Red */
 }
 
 /* Other option */
 .tip-option.other {
-    background-color: #9c27b0; /* Purple */
+     background-color: #ff0000; /* Red */
     color: white;
 }
 
@@ -652,7 +652,7 @@ input::placeholder {
     display: flex; 
     justify-content: space-between; 
     align-items: center; 
-    padding: 15px 0; 
+    padding: 15px ; 
     font-size: 18px; 
     font-weight: bold; 
     color: #333; 
