--- a/src/main/webapp/css/homestyle.css
+++ b/src/main/webapp/css/homestyle.css
@@ -8,7 +8,7 @@
 
 /* Body Styling */
 body {
-    background-color: #f4f4f4;
+    background-color: white;
     color: #333;
     margin: 0;
     padding: 0;
