--- a/src/main/webapp/css/modalPopup.css
+++ b/src/main/webapp/css/modalPopup.css
@@ -40,7 +40,7 @@
             font-size: 24px;
             margin-top:10px;
             margin-bottom: 5px;
-            color: red;
+            color: #000080;
             font-weight: bold;
             text-align:center;
         }
@@ -48,7 +48,7 @@
         .welcome-poptext p {
             font-size: 16px;
             margin: 0;
-            color: red;
+             color: #000080;
             line-height: 1.5;
             text-align:center;
         }
